# bot-zanuda-pytests

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  allure.properties  base_service_test.py  base_test.py  config.example.yaml  config.py  conftest.py  docker-compose.yaml  env.example  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.py  setup.cfg
.github/workflows/: build.yaml  lint.yaml  test.yaml
config/: __init__.py  services.py
src/: __init__.py  config.py
src/api_clients/: __init__.py  auth_service.py  base.py  webserver.py
src/brokers/: rabbitmq.py
src/common/: __init__.py  audit.py  errors.py  fields.py  ids.py  server_error_logging.py
src/models/: models.py  resource.py
src/storages/: postgres_client.py  vault_client.py
tests/: conftest.py
tests/api/: test_health.py
tests/auth_service/api/: test_metrics.py
tests/auth_service/api/v0/: auth_login_support.py  test_auth.py  test_health.py  test_notes.py  test_resource.py
tests/fixtures/: auth_jwt.py  auth_service.py  postgres.py  rabbitmq.py  vault.py  webserver.py
tests/webserver/: conftest.py
tests/webserver/api/: test_metrics.py
tests/webserver/api/v0/: test_health.py  test_notes.py
utils/: __init__.py  api_client.py  helpers.py  string_generator.py
