[project]
name = "pytests"
version = "0.1.0"
description = "Pytest test suite for bot-zanuda"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings[yaml]>=2.11.0",
    "pytest>=8.4.2",
    "flake8>=7.3.0",
    "flake8-annotations>=3.2.0",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "wemake-python-styleguide>=1.4.0",
    "pika>=1.3.2",
]
[tool.ruff.lint]
external = ["WPS"]